# AVR

./: CMakeLists.txt  Makefile  README.md  avr-gcc.cmake  main.cpp
Atmega32/: Makefile
Atmega32/inc/: uart.hpp
Atmega32/src/: main.cpp
Inc/: gpio.h
Src/: gpio.cpp  main.cpp
